--- a/Rudin.true/Rudin.tex
+++ b/Rudin.true/Rudin.tex
@@ -712,6 +712,7 @@ By \myref{Theorem}{1.4.4}, $z>0\implies (\frac{c}{b})^z>(\frac{c}{b})^0=1\implie
 Before the last arithmetic property, we first prove the existence of logarithm, which play an important role in the proof of last arithmetic property.
 \end{minipage}}
 \begin{theorem}
+\label{1.4.11}
 \textbf{(Existence of logarithm)} For all positive  $b,y$ where $b\neq 1$, there exists an unique  $x\inF $ such that $b^x=y$  
 \end{theorem}
 \begin{proof}
@@ -751,15 +752,19 @@ Observe $b^{x+\frac{1}{n}}=b^xb^{\frac{1}{n}}>b^xt=y$. Then $x+\frac{1}{n}$ is a
 
 Observe $b^{x-\frac{1}{n}}=\frac{b^x}{b^{\frac{1}{n}}}<\frac{b^x}{t}=y$. Then $x-\frac{1}{n}\inB\tCaC\bdone$
 \end{proof}
+\begin{definition}
+\label{1.4.12}
+\textbf{(Definition of logarithm)} Define $\log_b y:=x$, where $x,b,y$ are in \myref{Theorem}{1.4.11}.
+\end{definition}
 \begin{lemma}
-\label{1.4.11}
+\label{1.4.13}
 Given $0<x<rs$ and $0<r$ and  $0<s$, there exist positive rational $u<s$ and positive rational $t<r$ such that   $x<tu<rs$. 
 \end{lemma}
 \begin{proof}
   $0<x<rs \implies \frac{x}{s}<r$. Then there exists rational $t$ such that  $\frac{x}{s}<t<r$, which implies $\frac{x}{t}<s$. Then there exists rational $u$ such that $\frac{x}{t}<u<s$. Then $x<tu<rs$.
 \end{proof}
 \begin{theorem}
-\label{1.4.12}
+\label{1.4.14}
 \textbf{(Arithmetic property)} Given $r,s\inF\text{ and }a>0$, we have
 \begin{equation}
   (a^r)^s=a^{rs}
@@ -817,7 +822,24 @@ Notice that from now, when variables $t,u,x$ and their variants $t',u',x'$ are m
 
 The third case: \vi{$a>1\text{ and }r<0\text{ and }s>0\text{ and }rs\not\inq$}\\
 
-\As{$a^{rs}>(a^r)^s$}; that is, $\sup X>\inf  U$. Then $\exists x,\exists u,a^x>(a^r)^u=(\sup T)^u $. Notice that $u\leq 0\implies (a^r)^u\geq 1>a^x$, so $u$ must be positive. Then we have $\exists x,\exists u,a^{\frac{x}{u}}>\sup T$. Then, we have $\exists x,\exists u,\forall t,a^{\frac{x}{u}}>a^t$. Notice that $\frac{x}{u}<\frac{rs}{u}<r$, so there  exists $t$ such that  $a^{\frac{x}{u}}<a^t\tCaC.$ \As{$a^{rs}<(a^r)^s$}; that is, $\sup X<\inf U$.  
+\As{$a^{rs}>(a^r)^s$}; that is, $\sup X>\inf  U$. Then $\exists x,\exists u,a^x>(a^r)^u=(\sup T)^u $. Notice that $u\leq 0\implies (a^r)^u\geq 1>a^x$, so $u$ must be positive. Then we have $\exists x,\exists u,a^{\frac{x}{u}}>\sup T$. Then, we have $\exists x,\exists u,\forall t,a^{\frac{x}{u}}>a^t$. Notice that $\frac{x}{u}<\frac{rs}{u}<r$, so there  exists $t$ such that  $a^{\frac{x}{u}}<a^t\tCaC.$ \As{$a^{rs}<(a^r)^s$}; that is, $\sup X<\inf U$. Let $\sup X<m<\inf U$, and let $n=\log_a m$, so $a^{rs}<a^n<\inf  U$. Pick a rational $k$ so that  $a^{rs}<a^k<a^n<\inf U$. Then we know for all positive $u$, we have $a^{\frac{k}{u}}<a^r=\sup T$. This give us $\forall u>0,\exists t,a^k<a^{tu}$. Because $rs<k$, we know  $s>\frac{k}{r}$. Let $s>u'>\frac{k}{r}$. Then we see $\forall t,u't<u'r<k\tCaC\vdone$\\
+
+The forth case: \blue{$a>1\text{ and }r<0\text{ and }s<0\text{ and }rs\not\inq$}\\
+
+\As{$a^{rs}>(a^r)^s$}; that is, $\sup X>\inf U$. Then $\exists x,\exists u,a^x>(a^r)^u$. Because $u\leq s<0$, we have $\exists x,\exists u, a^{\frac{x}{u}}<a^r=\sup T$. Then $\exists x,\exists u,\exists t, a^x>a^{tu}$. Observe $tu\geq ru\geq rs>x\tCaC$. \As{$a^{rs}<(a^r)^s$}; that is, $\sup X<\inf U$. Let $\sup X<m<\inf U$, and let $n=\log_a m$, so $a^{rs}<a^n<\inf  U$. Pick a rational $k$ so that  $a^{rs}<a^k<a^n<\inf U$. Then, $\forall u, a^{\frac{k}{u}}>a^r=\sup T$. This implies $\forall u,\forall t,a^k<a^{tu}$. Because $rs<k$, we know  $s>\frac{k}{r}$. Let $s>u'>\frac{k}{r}$. Then $u'r<k$, which implies $r>\frac{k}{u'}$. Let $r>t'>\frac{k}{u'}$. Then we see $t'u'<k\tCaC\bdone$\\
+
+The next four cases where $a<1$ use the same logic, and  reference to \myref{Theorem}{1.4.9}.\\
+
+The forth to eighth cases:  \vi{$a<1\text{ and }rs\not\inq$}\\
+
+By the above four cases, we know $((\frac{1}{a})^r)^s=(\frac{1}{a})^{rs}$. Observe $a^{rs}(\frac{1}{a})^{rs}=1^{rs}=1$, and observe $(a^r)^s((\frac{1}{a})^r)^s=(a^r(\frac{1}{a})^r)^s=((1)^r)^s=1\vdone$.\\
+
+The final eight cases:  \blue{$rs\inq$}\\
+
+If $r,s$ are both rational, the proof reference to \myref{Theorem}{1.3.13}. Notice that if only one of $r,s$ is rational, then  $rs$ is irrational, so we can assume  $r,s$ are both irrational. Observe by the eight cases above, $(a^{rs})^{\frac{1}{s}}=a^r$, so by \myref{Definition}{1.3.9}, $(a^r)^s=((a^{rs})^{\frac{1}{s}})^s=a^{rs}\bdone$\\
+
+Notice that outside of the sixteen cases above, if $a=1\text{ or }s=0\text{ or }s=0$, the proof is trivial.
+
 \end{proof}
 \section{Exercises}
 \begin{question}{}{}
